--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ badges:
       icon: github
 
     - name: Issues (JIRA)
-      url:  http://jira.springsource.org/browse/ANDROID
+      url:  https://jira.springsource.org/browse/ANDROID
       icon: tracking
 
     - name: CI (Bamboo)
@@ -22,7 +22,7 @@ badges:
       icon: ci
 
     - name: StackOverflow
-      url:  http://stackoverflow.com/questions/tagged/spring-android
+      url:  https://stackoverflow.com/questions/tagged/spring-android
       icon: stackoverflow
 
 ---
